# FlowTutor

./: .coveragerc  .gdbinit  .gitattributes  .gitignore  Jenkinsfile  MANIFEST.in  README.md  app.py  build-win-installer-light.sh  deploy-win-vm.sh  flowchart.py  ftflowchart.py  ftmodals.py  ftnodetype.py  ftshapes.py  ftshapetype.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  shapetype.py  tox.ini  win_installer.cfg  win_installer_full.cfg
gdb-codesign/: gdb-entitlement.xml  macos-setup-codesign.sh
local_wheels/: dearpygui-1.8.0-cp310-cp310-win_amd64.whl
nsis/: build-win-installer-full.sh  win_installer_full.cfg  win_installer_light.cfg
pynsist_pkgs/: _tkinter.lib
scripts/: deploy-win-vm.sh  tag-realease.sh
src/: assignment.py  conditional.py  connection.py  connector.py  flowchart.py  input.py  loop.py  main.py  modals.py  node.py  nodetype.py  output.py
src/flowtutor/: __init__.py  codegenerator.py  containers.py  debugger.py  debugsession.py  flowchart_gui.py  gui.py  language.py  language_service.py  main.py  modal_service.py  modals.py  nodes_service.py  settings.py  settings_service.py  template_service.py  themes.py  util_service.py  utils.py
src/flowtutor/debugger/: __init__.py  debugsession.py  ftdb.py  ftdbsession.py  gdbsession.py  stdinqueue.py
src/flowtutor/flowchart/: __init__.py  assignment.py  call.py  conditional.py  connection.py  connector.py  declaration.py  declarations.py  dowhileloop.py  flowchart.py  forloop.py  function.py  functionend.py  functionstart.py  input.py  loop.py  node.py  node_type.py  output.py  parameter.py  root.py  snippet.py  struct_definition.py  struct_member.py  template.py  type_definition.py  whileloop.py
src/flowtutor/gui/: __init__.py  debugger.py  gui.py  menubar_main.py  section_node_extras.py  section_structs.py  section_typedefs.py  sidebar.py  sidebar_assignment.py  sidebar_call.py  sidebar_conditional.py  sidebar_declaration.py  sidebar_declarations.py  sidebar_dowhileloop.py  sidebar_forloop.py  sidebar_functionend.py  sidebar_functionstart.py  sidebar_input.py  sidebar_loop.py  sidebar_multi.py  sidebar_none.py  sidebar_output.py  sidebar_snippet.py  sidebar_template.py  sidebar_whileloop.py  themes.py  window_types.py
src/flowtutor/gui/assets/: __init__.py
src/flowtutor/templates/: __init__.py
src/flowtutor/templates/c/: close_file.template.json  declaration.template.json  dowhileloop.jinja  input.template.json  open_file.jinja  output.template.json  write_file.template.json
src/flowtutor/templates/python/: call.template.json  forloop.jinja  function.jinja  input.jinja
templates/: assignment.template.json  call.template.json  close_file.json  close_file.template.json  conditional.jinja  conditional.template.json  declaration.jinja  declaration.template.json  dowhileloop.template.json  forloop.template.json  input.jinja  input.template.json  open_file.json  open_file.template.json  output.template.json  snippet.template.json  whileloop.jinja  whileloop.template.json  write_file.json  write_file.template.json
templates/c/: conditional.jinja  declaration.template.json  forloop.jinja  forloop.template.json  function.jinja  language.json  snippet.template.json  whileloop.template.json
templates/python/: assignment.template.json  call.template.json  conditional.jinja  dowhileloop.jinja  dowhileloop.template.json  forloop.jinja  forloop.template.json  function.jinja  input.template.json  language.json  output.template.json  whileloop.jinja
tests/: test_flowtutor_codegenerator.py  test_flowtutor_flowchart.py
