[options]
install_requires =
    appdirs>=1.4
    blinker>=1.6
    dearpygui>=1.9
    Shapely>=2.0
    dependency-injector>=4.41
    pygdbmi>=0.11
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
flowtutor = py.typed

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    mypy>=1.2
    flake8>=6.0
    tox>=4.4
deployment =
    pynsist>=2.8

[options.entry_points]
console_scripts =
    flowtutor = flowtutor.main:main
gui_scripts =
    flowtutor = flowtutor.main:main

[flake8]
max-line-length = 120
