[options]
install_requires =
    appdirs>=1.4
    blinker>=1.6
    dearpygui>=1.10
    Shapely>=2.0
    dependency-injector>=4.41
    pygdbmi>=0.11
    urllib3>=1.26
    Jinja>=3.1
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
flowtutor = py.typed

[options.extras_require]
testing =
    pytest>=7.4
    pytest-cov>=4.1
    mypy>=1.5
    flake8>=6.1
    tox>=4.11
deployment =
    pynsist>=2.8
    twine>=4.0
    build>=1.0

[options.entry_points]
console_scripts =
    flowtutor = flowtutor.main:main
gui_scripts =
    flowtutor = flowtutor.main:main

[flake8]
max-line-length = 120
